--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<img class="ico" src="Bulbasaur_icon.webp"></img>
 						</td>
 						<td class="col40 leftalign">
-							<a href="ROM-Hacks/Pokémon-Quartz/Spritedex.html">
+							<a href="ROMHacks/PokémonQuartz/Spritedex.html">
 								Bulbasaur
 							</a>
 						</td>
