--- a/ROMHacks/PokémonQuartz/Spritedex.html
+++ b/ROMHacks/PokémonQuartz/Spritedex.html
@@ -30,7 +30,8 @@
 			</script>
 		
 			<nav>
-				<!--#include virtual="../../navbar.html" --> 
+				<!--#include file="../../navbar.html" -->
+				<link rel="import" href="../../navbar.html">
 			</nav>
 			
 			<nav-mobile id="nav-mobile" style="display: none;">
