--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
 							<img class="ico" src="Zygarde-Complete_icon.png"></img>
 						</td>
 						<td class="leftalign">
-							Charizard
+							<a href="nuevo 1">
+								Charizard
+							</a>
 						</td>
 						<td>
 							<p class="type Fire">Fire</p>
