--- a/nuevo 1.html
+++ b/nuevo 1.html
@@ -8,7 +8,7 @@ function includeHTML() {
   for (i = 0; i < z.length; i++) {
     elmnt = z[i];
     /*search for elements with a certain attribute:*/
-    file = elmnt.getAttribute("w3-include-html");
+    file = elmnt.getAttribute("include-html");
     if (file) {
       /*make an HTTP request using the attribute value as the file name:*/
       xhttp = new XMLHttpRequest();
@@ -32,7 +32,7 @@ function includeHTML() {
 
 <body>
 <p>include goddamnit</p>
-<div w3-include-html="navbar.html"></div> 
+<div include-html="navbar.html"></div> 
 
 <script>
 includeHTML();
