--- a/index.html
+++ b/index.html
@@ -498,5 +498,10 @@
 		<footer>
 			<p>The Fakemon Library is a project dedicated to documenting as many Fakemon as possible while maintaining consistent quality and presentation.</p>
 		</footer>
+		
+		<script>
+			insertHTML();
+		</script>
+		
 	</body>
 </html>
