--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		
 		<div id="main-div">
 		
-			<nav include-html="navbar.html" id="navbar">
+			<nav include-html="navbar.html">
 			</nav>
 			
-			<nav-mobile include-html="navbar.html" id="nav-mobile" style="display: none;">
+			<nav-mobile include-html="navbar.html" style="display: none;">
 			</nav-mobile>
 			
 			<article>
@@ -477,10 +477,10 @@
 				
 			</article>
 			
-			<side id="sidebar">
+			<side>
 				
 			</side>
-			<side-mobile id="sidebarmobile" style="display: none;">
+			<side-mobile tyle="display: none;">
 			
 			</side-mobile>
 		</div>
