--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<nav include-html="navbar.html">
 			</nav>
 			
-			<nav-mobile include-html="navbar.html" style="display: none;">
+			<nav-mobile include-html="navbar.html" id="nav-m" style="display: none;">
 			</nav-mobile>
 			
 			<article>
@@ -478,10 +478,9 @@
 			</article>
 			
 			<side>
-				
 			</side>
-			<side-mobile tyle="display: none;">
 			
+			<side-mobile id="side-m" tyle="display: none;">
 			</side-mobile>
 		</div>
 		
