--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		
 		<div id="main-div">
 		
-			<nav include-html="navbar.html">
-			</nav>
+			<div include-html="navbar.html" id="pokenav">
+			</div>
 			
 			<nav-mobile include-html="navbar.html" id="nav-m" style="display: none;">
 			</nav-mobile>
@@ -477,10 +477,10 @@
 				
 			</article>
 			
-			<side>
+			<side include-html="sidebar.html">
 			</side>
 			
-			<side-mobile id="side-m" tyle="display: none;">
+			<side-mobile include-html="sidebar.html" id="side-m" tyle="display: none;">
 			</side-mobile>
 		</div>
 		
