--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		
 		<div id="main-div">
 		
-			<div include-html="navbar.html" id="pokenav">
-			</div>
+			<nav include-html="navbar.html" id="pokenav">
+			</nav>
 			
 			<nav-mobile include-html="navbar.html" id="nav-m" style="display: none;">
 			</nav-mobile>
