--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 		
 		<div id="main-div">
 		
-			<nav include-html="navbar.html" id="pokenav">
-			</nav>
+			<div id="nav" include-html="navbar.html">
+			</div>
 			
-			<nav-mobile include-html="navbar.html" id="nav-m" style="display: none;">
-			</nav-mobile>
+			<div id="nav-m" include-html="navbar.html" style="display: none;">
+			</div>
 			
 			<article>
 			
@@ -477,11 +477,11 @@
 				
 			</article>
 			
-			<side include-html="sidebar.html">
-			</side>
+			<nav id="side" include-html="sidebar.html">
+			</nav>
 			
-			<side-mobile include-html="sidebar.html" id="side-m" tyle="display: none;">
-			</side-mobile>
+			<nav id="side-m" include-html="sidebar.html" id="side-m" tyle="display: none;">
+			</nav>
 		</div>
 		
 		<footer include-html="footer.html">
