--- a/ROMHacks/PokémonQuartz/Spritedex.html
+++ b/ROMHacks/PokémonQuartz/Spritedex.html
@@ -103,7 +103,7 @@
 			</side-mobile>
 		</div>
 		
-		<footer include-html="footer.html">
+		<footer include-html="/footer.html">
 		</footer>
 		
 		<script>
