--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
 			<nav id="side" include-html="sidebar.html">
 			</nav>
 			
-			<nav id="side-m" include-html="sidebar.html" id="side-m" tyle="display: none;">
+			<nav id="side-m" include-html="sidebar.html" style="display: none;">
 			</nav>
 		</div>
 		
