--- a/ROMHacks/PokémonQuartz/Spritedex.html
+++ b/ROMHacks/PokémonQuartz/Spritedex.html
@@ -14,11 +14,11 @@
 		
 		<div id="main-div">
 		
-			<nav include-html="../../navbar.html">
-			</nav>
+			<div id="nav" include-html="../../navbar.html">
+			</div>
 			
-			<nav-mobile include-html="../../navbar.html" id="nav-m" style="display: none;">
-			</nav-mobile>
+			<div id="nav-m" include-html="../../navbar.html" style="display: none;">
+			</div>
 			
 			<article>
 			
@@ -97,10 +97,10 @@
 				
 			</article>
 			
-			<side include-html="sidebar.html">
-			</side>
-			<side-mobile include-html="sidebar.html" id="side-m" style="display: none;">
-			</side-mobile>
+			<div id="side" include-html="sidebar.html">
+			</div>
+			<div id="side-m" include-html="sidebar.html" style="display: none;">
+			</div>
 		</div>
 		
 		<footer include-html="/footer.html">
