--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
-<img src="/Resources/DexLEDs.png" class="decoration"></img>
-<img src="/Resources/DexSlider.png" class="decoration" style="float:right;"></img>
+<img src="Resources/DexLEDs.png" class="decoration"></img>
+<img src="Resources/DexSlider.png" class="decoration" style="float:right;"></img>
 <a href=><img src="Resources/DexHeader.png" class="decoration" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0; text-align: center;"></img></a>
-			
-<img src="/Resources/NavButton.png" class="mobile-button" onclick="toggleBar('nav-m')"></img>
-<img src="/Resources/NavButton.png" class="mobile-button" onclick="toggleBar('side-m')" style="float: right"></img>
+
+<img src="Resources/NavButton.png" class="mobile-button" onclick="toggleBar('nav-m')"></img>
+<img src="Resources/NavButton.png" class="mobile-button" onclick="toggleBar('side-m')" style="float: right"></img>
 <a href=#><img src="Resources/DexHeaderMobile.png" class="mobile-button" style="position:absolute; margin-left: auto; margin-right: auto; left: 0; right: 0; text-align: center;"></img></a>
