--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<header include-html="header.html">
 		</header>
 		
-		<div id="main-div">
+		<div id="main-div" style="display: flex;">
 		
 			<div id="nav" include-html="navbar.html">
 			</div>
@@ -477,11 +477,11 @@
 				
 			</article>
 			
-			<nav id="side" include-html="sidebar.html">
-			</nav>
+			<div id="side" include-html="sidebar.html">
+			</div>
 			
-			<nav id="side-m" include-html="sidebar.html" style="display: none;">
-			</nav>
+			<div id="side-m" include-html="sidebar.html" style="display: none;">
+			</div>
 		</div>
 		
 		<footer include-html="footer.html">
