--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <img src="/Resources/DexLEDs.png" class="decoration"></img>
 <img src="/Resources/DexSlider.png" class="decoration" style="float:right;"></img>
-<a href=><img src="/Resources/DexHeader.png" class="decoration float-center"></img></a>
+<a href="fakemonlibrary.org"><img src="/Resources/DexHeader.png" class="decoration float-center"></img></a>
 
 <img src="/Resources/NavButton.png" class="mobile-button" onclick="toggleBar('nav-m')"></img>
 <img src="/Resources/NavButton.png" class="mobile-button" onclick="toggleBar('side-m')" style="float: right"></img>
-<a href=#><img src="/Resources/DexHeaderMobile.png" class="decoration float-center"></img></a>
+<a href="fakemonlibrary.org"><img src="/Resources/DexHeaderMobile.png" class="mobile-button float-center"></img></a>
