--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<header include-html="header.html">
 		</header>
 		
-		<div id="main-div" style="display: flex;">
+		<div id="main-div">
 		
 			<div id="nav" include-html="navbar.html">
 			</div>
