--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 
 	<head>
+		<title>The Fakemon Library &mdash; An archive for fan-made Pokémon</title>
 		<link rel="stylesheet" href="styles.css">
 		<script src="dynamics.js"></script>
 	</head>
