--- a/ROMHacks/PokémonQuartz/Spritedex.html
+++ b/ROMHacks/PokémonQuartz/Spritedex.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 	<head>
-		<title>Pokémon Quartz &mdash; Spritedex</title>
+		<title>Pokémon Quartz &mdash; Pokédex List</title>
 		<link rel="stylesheet" href="../../styles.css">
 		<script src="../../dynamics.js"></script>
 	</head>
