--- a/ROMHacks/PokémonQuartz/Pokédex.html
+++ b/ROMHacks/PokémonQuartz/Pokédex.html
@@ -9,7 +9,7 @@
 
 	<body>
 		
-		<header include-html="header.html">
+		<header include-html="/header.html">
 		</header>
 		
 		<div id="main-div">
