--- a/ROMHacks/PokémonQuartz/Pokédex.html
+++ b/ROMHacks/PokémonQuartz/Pokédex.html
@@ -46,7 +46,7 @@
 							<img src="/ROMHacks/PokémonQuartz/Chapebaya_icon.png" class="ico"></img>
 						</td>
 						<td class="col40 leftalign">
-							<a href="/ROMHacks/PokémonQuartz/Spritedex.html">
+							<a href="/ROMHacks/PokémonQuartz/Pokédex/Chapebaya.html">
 								Bulbasaur
 							</a>
 						</td>
@@ -63,7 +63,7 @@
 							<img src="/ROMHacks/PokémonQuartz/Sprites/Roellama_icon.png" class="ico"></img>
 						</td>
 						<td class="leftalign">
-							<a href="PokémonQuartz/Chapebaya.html">
+							<a href="Pokédex/Chapebaya.html">
 								Chapebaya
 							</a>
 						</td>
@@ -80,7 +80,9 @@
 							<img src="Spritedex/Chapebaya_icon.png" class="ico"></img>
 						</td>
 						<td class="leftalign">
-						Pikachu
+							<a href="Pokédex/Chapebaya.html">
+								Chapebaya
+							</a>
 						</td>
 					<td>
 							<p class="type Electric">Electric</p>
@@ -94,8 +96,8 @@
 							<img class="ico" src="Pikachu-alolan_icon.png"></img>
 						</td>
 						<td class="leftalign">
-							<a href=#>
-								Pikachu
+							<a href="/PokémonQuartz/Pokédex/Chapebaya.html">
+								Chapebaya
 							</a>
 						</td>
 						<td>
