--- a/ROMHacks/PokémonQuartz/Pokédex.html
+++ b/ROMHacks/PokémonQuartz/Pokédex.html
@@ -96,7 +96,7 @@
 							<img class="ico" src="Pikachu-alolan_icon.png"></img>
 						</td>
 						<td class="leftalign">
-							<a href="/PokémonQuartz/Pokédex/Chapebaya.html">
+							<a href="/ROMHacks/PokémonQuartz/Pokédex/Chapebaya.html">
 								Chapebaya
 							</a>
 						</td>
