--- a/ROMHacks/PokémonQuartz/Pokédex.html
+++ b/ROMHacks/PokémonQuartz/Pokédex.html
@@ -43,7 +43,7 @@
 							001
 						</td>
 						<td class="col15">
-							<img src="/ROMHacks/PokémonQuartz/Chapebaya_icon.png" class="ico"></img>
+							<img src="/ROMHacks/PokémonQuartz/Sprites/Chapebaya_icon.png" class="ico"></img>
 						</td>
 						<td class="col40 leftalign">
 							<a href="/ROMHacks/PokémonQuartz/Pokédex/Chapebaya.html">
@@ -60,7 +60,7 @@
 							004
 						</td>
 						<td>
-							<img src="/ROMHacks/PokémonQuartz/Sprites/Roellama_icon.png" class="ico"></img>
+							<img src="/ROMHacks/PokémonQuartz/Sprites/Chapebaya_icon.png" class="ico"></img>
 						</td>
 						<td class="leftalign">
 							<a href="Pokédex/Chapebaya.html">
@@ -77,11 +77,11 @@
 							025
 						</td>
 						<td>
-							<img src="Spritedex/Chapebaya_icon.png" class="ico"></img>
+							<img src="Sprites/Chapebaya_icon.png" class="ico"></img>
 						</td>
 						<td class="leftalign">
 							<a href="Pokédex/Chapebaya.html">
-								Chapebaya
+								Chapebaya Relative
 							</a>
 						</td>
 					<td>
@@ -93,11 +93,11 @@
 							025
 						</td>
 						<td>
-							<img class="ico" src="Pikachu-alolan_icon.png"></img>
+							<img class="ico" src="/ROMHacks/PokémonQuartz/Sprites/Chapebaya_icon.png"></img>
 						</td>
 						<td class="leftalign">
 							<a href="/ROMHacks/PokémonQuartz/Pokédex/Chapebaya.html">
-								Chapebaya
+								Chapebaya Root
 							</a>
 						</td>
 						<td>
