--- a/ROMHacks/PokémonQuartz/Pokédex.html
+++ b/ROMHacks/PokémonQuartz/Pokédex.html
@@ -77,7 +77,7 @@
 							025
 						</td>
 						<td>
-							<img src="Sprites/Chapebaya_icon.png" class="ico"></img>
+							<img src="/ROMHacks/PokémonQuartz/Sprites/Chapebaya_icon.png" class="ico"></img>
 						</td>
 						<td class="leftalign">
 							<a href="Pokédex/Chapebaya.html">
@@ -93,7 +93,7 @@
 							025
 						</td>
 						<td>
-							<img class="ico" src="/ROMHacks/PokémonQuartz/Sprites/Chapebaya_icon.png"></img>
+							<img src="/ROMHacks/PokémonQuartz/Sprites/Chapebaya_icon.png" class="ico"></img>
 						</td>
 						<td class="leftalign">
 							<a href="/ROMHacks/PokémonQuartz/Pokédex/Chapebaya.html">
