--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 
 	<head>
 		<title>The Fakemon Library &mdash; An archive for fan-made Pokémon</title>
-		<link rel="stylesheet" href="styles.css">
-		<script src="dynamics.js"></script>
+		<link rel="stylesheet" href="/styles.css">
+		<script src="/dynamics.js"></script>
 	</head>
 
 	<body>
+	
+		<div class="page">
 		
 		<header include-html="header.html">
 		</header>
@@ -295,6 +297,9 @@
 					<div class="tablecontainerh">
 						<h3>Chapebaya</h3>
 						<table class="dexh">
+							<div class="dexh" style="background: dark-blue;">
+										<h3>Chapebaya</h3>
+							</div>
 							<tr>
 								<th class="dexh"">Type</th>
 								<td class="dexh">
@@ -487,6 +492,8 @@
 		
 		<footer include-html="footer.html">
 		</footer>
+		
+		</div>
 		
 		<script>
 			includeHTML();
