--- a/ROMHacks/PokémonQuartz/Spritedex.html
+++ b/ROMHacks/PokémonQuartz/Spritedex.html
@@ -8,6 +8,8 @@
 	</head>
 
 	<body>
+	
+		<div class="page">
 		
 		<header include-html="../../header.html">
 		</header>
@@ -105,6 +107,8 @@
 		
 		<footer include-html="../../footer.html">
 		</footer>
+		
+		</div>
 		
 		<script>
 			includeHTML();
