--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <img src="/Resources/DexLEDs.png" class="decoration"></img>
-<img src="/Resources/DexSlider.png" class="decoration float-right"></img>
+<img src="/Resources/DexSlider.png" class="decoration"></img>
 <a href="https://fakemonlibrary.org"><img src="/Resources/DexHeader.png" class="decoration float-center"></img></a>
 
 <img src="/Resources/NavButton.png" class="mobile-button" onclick="toggleBar('nav-m')"></img>
-<img src="/Resources/NavButton.png" class="mobile-button float-right" onclick="toggleBar('side-m')"></img>
+<img src="/Resources/NavButton.png" class="mobile-button" onclick="toggleBar('side-m')"></img>
 <a href="https://fakemonlibrary.org"><img src="/Resources/DexHeaderMobile.png" class="mobile-button float-center"></img></a>
