--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<title>The Fakemon Library &mdash; An archive for fan-made Pokémon</title>
-		<link rel="stylesheet" href="/styles.css">
+		<link rel="stylesheet" href="styles.css">
 		<script src="/dynamics.js"></script>
 	</head>
 
