--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<img class="ico" src="Bulbasaur_icon.webp"></img>
 						</td>
 						<td class="col40 leftalign">
-							<a href="ROMHacks/PokémonQuartz/Spritedex.html">
+							<a href="ROMHacks/PokémonQuartz/Gallery.html">
 								Bulbasaur
 							</a>
 						</td>
