--- a/ROMHacks/PokémonQuartz/Gallery.html
+++ b/ROMHacks/PokémonQuartz/Gallery.html
@@ -99,9 +99,9 @@
 					
 				</article>
 				
-				<div id="side" include-html="ROMHacks/PokémonQuartz/sidebar.html">
+				<div id="side" include-html="/ROMHacks/PokémonQuartz/sidebar.html">
 				</div>
-				<div id="side-m" include-html="ROMHacks/PokémonQuartz/sidebar.html" style="display: none;">
+				<div id="side-m" include-html="/ROMHacks/PokémonQuartz/sidebar.html" style="display: none;">
 				</div>
 			</div>
 			
