--- a/ROMHacks/PokémonQuartz/Pokédex.html
+++ b/ROMHacks/PokémonQuartz/Pokédex.html
@@ -31,7 +31,7 @@
 						<th class="col15 sortable" onclick="sortTable(0, 'dexlist1')">
 							No.
 						</th>
-						<th colspan=2 onclick="sortTable(1, 'dexlist1')">
+						<th colspan=2 class="sortable" onclick="sortTable(1, 'dexlist1')">
 							Pokémon
 						</th>
 						<th class="col30 sortable" onclick="sortTable(3, 'dexlist1')">
