--- a/ROMHacks/PokémonQuartz/sidebar.html
+++ b/ROMHacks/PokémonQuartz/sidebar.html
@@ -1,17 +1,20 @@
-<img src="Pokémon-Quartz-Title"></img>
-<p>Baro, 2006</p>
+<h1>Pokémon Quartz</h1>
+<img src="/ROMHacks/PokémonQuartz/Title.png" class="centered sideimg"></img>
+<p class="centered">&copy; Baro, 2006</p>
+<h1 class="barheader">Pokémon</h1>
 <ul>
-	<h1 class="barheader">Pokémon</h1>
-		<li><a href=#>Pokédex</a></li>
-		<li><a href=#>Spritedex</a></li>
-		<li><a href=#>New Fakemon</a></li>
-		<li><a href=#>New Pokémon Forms</a></li>
-		<li><a href=#>New Fakemon Forms</a></li>
-		<li><a href=#>Returning Fakemon</a></li>
-		<li><a href=#>Returning Pokémon</a></li>
-	<h1 class="barheader">Other Info</h1>
-		<li><a href=#>PokéNav</a></li>
-		<li><a href=#>Item Compendium</a></li>
-		<li><a href=#>Story</a></li>
-		<li><a href=#>Characters</a></li>
+	<li><a href="/ROMHacks/PokémonQuartz/Pokédex.html">Pokédex</a></li>
+	<li><a href="/ROMHacks/PokémonQuartz/Gallery.html">Gallery</a></li>
+	<li><a href=#>New Fakemon</a></li>
+	<li><a href=#>Returning Fakemon</a></li>
+	<li><a href=#>New Fakemon Forms</a></li>
+	<li><a href=#>Returning Pokémon</a></li>
+	<li><a href=#>New Pokémon Forms</a></li>
+</ul>
+<h1 class="barheader">Other Info</h1>
+<ul>
+	<li><a href=#>PokéNav</a></li>
+	<li><a href=#>Item Compendium</a></li>
+	<li><a href=#>Story</a></li>
+	<li><a href=#>Characters</a></li>
 </ul>
