--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <div id="header-full">
 	<img src="/Resources/DexLEDs.png" class="decoration"></img>
-	<a href="https://fakemonlibrary.org"><img src="/Resources/DexHeader.png" class="decoration"></img></a>
+	<a href="https://fakemonlibrary.org"><img src="/Resources/DexHeader.png" class="decoration float-center"></img></a>
 	<img src="/Resources/DexSlider.png" class="decoration"></img>
 </div>
 		
