--- a/ROMHacks/PokémonQuartz/sidebar.html
+++ b/ROMHacks/PokémonQuartz/sidebar.html
@@ -1,5 +1,5 @@
 <h1>Pokémon Quartz</h1>
-<img src="/ROMHacks/PokémonQuartz/Title.png" class="centered sideimg"></img>
+<img src="/ROMHacks/PokémonQuartz/Title.png" class="float-center sideimg"></img>
 <p class="centered">&copy; Baro, 2006</p>
 <h1 class="barheader">Pokémon</h1>
 <ul>
