--- a/sidebar.html
+++ b/sidebar.html
@@ -1,6 +1,6 @@
 <h1 class="barheader">News</h1>
-<img src="/ROMHacks/PokémonQuartz/Title.png" class="centered sideimg"></img>
-<p class="centered"></p>
+<img src="/ROMHacks/PokémonQuartz/Title.png" class="sideimg centered"></img>
+<p class="centered">Updated: Aug 28, 2022</p>
 <h1 class="barheader">Recently Updated</h1>
 <ul>
 	<li><a href="/ROMHacks/PokémonQuartz.html">Pokémon Quartz</a></li>
@@ -11,10 +11,10 @@
 	<li><a href=#>Returning Pokémon</a></li>
 	<li><a href=#>New Pokémon Forms</a></li>
 </ul>
-<h1 class="barheader">Other Info</h1>
+<h1 class="barheader">Cool Sites</h1>
 <ul>
-	<li><a href=#>PokéNav</a></li>
-	<li><a href=#>Item Compendium</a></li>
-	<li><a href=#>Story</a></li>
-	<li><a href=#>Characters</a></li>
+	<li><a href=#>Pokémon Factory</a></li>
+	<li><a href=#>RageCandyBar</a></li>
+	<li><a href=#>Bulbapedia</a></li>
+	<li><a href=#>The Cave of Dragonflies</a></li>
 </ul>
