--- a/ROMHacks/PokémonQuartz/sidebar.html
+++ b/ROMHacks/PokémonQuartz/sidebar.html
@@ -1,5 +1,5 @@
-<h1>Pokémon Quartz</h1>
-<img src="/ROMHacks/PokémonQuartz/Title.png" class="float-center sideimg"></img>
+<h1 class="barheader">Pokémon Quartz</h1>
+<img src="/ROMHacks/PokémonQuartz/Title.png" class="sideimg centered"></img>
 <p class="centered">&copy; Baro, 2006</p>
 <h1 class="barheader">Pokémon</h1>
 <ul>
@@ -13,8 +13,7 @@
 </ul>
 <h1 class="barheader">Other Info</h1>
 <ul>
+	<li><a href=#>Story & Characters</a></li>
 	<li><a href=#>PokéNav</a></li>
 	<li><a href=#>Item Compendium</a></li>
-	<li><a href=#>Story</a></li>
-	<li><a href=#>Characters</a></li>
 </ul>
