--- a/sidebar.html
+++ b/sidebar.html
@@ -1,15 +1,15 @@
 <h1 class="barheader">Updates</h1>
 <img src="/ROMHacks/PokémonQuartz/Title.png" class="sideimg centered"></img>
-<p class="centered">Aug 28, 2022</p>
+<p class="bartext centered">Aug 28, 2022</p>
 <hr class="barline">
 <img src="/ROMHacks/PokémonQuartz/Title.png" class="sideimg centered"></img>
-<p class="centered">Aug 28, 2022</p>
+<p class="bartext centered">Aug 28, 2022</p>
 <hr class="barline">
 <img src="/ROMHacks/PokémonQuartz/Title.png" class="sideimg centered"></img>
-<p class="centered">Aug 28, 2022</p>
+<p class="bartext centered">Aug 28, 2022</p>
 <hr class="barline">
 <img src="/ROMHacks/PokémonQuartz/Title.png" class="sideimg centered"></img>
-<p class="centered">Aug 28, 2022</p>
+<p class="bartext centered">Aug 28, 2022</p>
 <h1 class="barheader">Recently Updated</h1>
 <ul>
 	<li><a href="/ROMHacks/PokémonQuartz.html">Pokémon Quartz</a></li>
