--- a/ROMHacks/PokémonQuartz/sidebar.html
+++ b/ROMHacks/PokémonQuartz/sidebar.html
@@ -1,6 +1,6 @@
 <h1 class="barheader">Pokémon Quartz</h1>
 <img src="/ROMHacks/PokémonQuartz/Title.png" class="sideimg centered"></img>
-<p class="centered">&copy; Baro, 2006</p>
+<p class="bartext centered">&copy; Baro, 2006</p>
 <h1 class="barheader">Pokémon</h1>
 <ul>
 	<li><a href="/ROMHacks/PokémonQuartz/Pokédex.html">Pokédex</a></li>
