--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
 </div>
 		
 <div id="header-mobile">
-	<img src="/Resources/NavButton.png" class="mobile-button" onclick="toggleBar('nav-m')"></img>
+	<img src="/Resources/NavButton.png" class="mobile-button" onclick="toggleBar('nav-mobile')"></img>
 	<a href="https://fakemonlibrary.org"><img src="/Resources/DexHeaderMobile.png" class="mobile-button"></img></a>
-	<img src="/Resources/NavButton.png" class="mobile-button" onclick="toggleBar('side-m')"></img>
+	<img src="/Resources/NavButton.png" class="mobile-button" onclick="toggleBar('side-mobile')"></img>
 </div>
