--- a/ROMHacks/PokémonQuartz/Pokédex.html
+++ b/ROMHacks/PokémonQuartz/Pokédex.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 
 	<head>
+		<link rel="shortcut icon" href="/Resources/Icon.ico">
 		<title>The Fakemon Library &mdash; An archive for fan-made Pokémon</title>
 		<link rel="stylesheet" href="/styles.css">
 		<script src="/dynamics.js"></script>
