--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 	<head>
-		<link rel="shortcut icon" href="/Resources/Icon.ico">
+		<link rel="shortcut icon" href="/Resources/Icon.png">
 		<title>The Fakemon Library &mdash; An archive for fan-made Pokémon</title>
 		<link rel="stylesheet" href="/styles.css">
 		<script src="/dynamics.js"></script>
