--- a/ROMHacks/PokémonQuartz/Gallery.html
+++ b/ROMHacks/PokémonQuartz/Gallery.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 	<head>
-		<link rel="shortcut icon" href="/Resources/Icon.ico">
+		<link rel="shortcut icon" href="/Resources/Icon.png">
 		<title>Pokémon Quartz &mdash; Pokédex List</title>
 		<link rel="stylesheet" href="/styles.css">
 		<script src="/dynamics.js"></script>
