--- a/header.html
+++ b/header.html
@@ -6,6 +6,6 @@
 		
 <div id="header-mobile">
 	<img class="mobile-button" onclick="toggleBar('pokenav-mobile')"></img>
-	<a href="https://fakemonlibrary.org"><img src="/Resources/DexHeaderMobile.png"></img></a>
+	<a href="https://fakemonlibrary.org"><img class="mobile-decoration" src="/Resources/DexHeaderMobile.png"></img></a>
 	<img class="mobile-button" onclick="toggleBar('pokegear-mobile')"></img>
 </div>
