--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
 </div>
 		
 <div id="header-mobile">
-	<img class="mobile-button" onclick="toggleBar('pokenav-mobile')"></img>
+	<img src="/Resources/ButtonFrame.png" class="mobile-button" onclick="toggleBar('pokenav-mobile')"></img>
 	<a href="https://fakemonlibrary.org"><img class="mobile-decoration" src="/Resources/DexHeaderMobile.png"></img></a>
-	<img class="mobile-button" onclick="toggleBar('pokegear-mobile')"></img>
+	<img src="/Resources/ButtonFrame.png" class="mobile-button" onclick="toggleBar('pokegear-mobile')"></img>
 </div>
