--- a/navbar.html
+++ b/navbar.html
@@ -88,6 +88,7 @@
 	</ul>
 <h1 class="barheader">Other</h1>
 	<ul>
+		<li><a href=#>Smogon CAP</a></li>
 		<li><a href=#>PokéFarm Q</a></li>
 		<li><a href=#>Amethyst</a></li>
 	</ul>
