--- a/navbar.html
+++ b/navbar.html
@@ -9,7 +9,7 @@
 	</ul>
 <h1 class="barheader">ROM Hacks</h1>
 	<ul>
-		<li><a href=#>Quartz</a></li>
+		<li><a href="/ROMHacks/PokémonQuartz/index.html">Quartz</a></li>
 		<li><a href=#>Marble</a></li>
 		<li><a href=#>Topaz</a></li>
 		<li><a href=#>Ambar</a></li>
