--- a/ROMHacks/PokémonQuartz/Gallery.html
+++ b/ROMHacks/PokémonQuartz/Gallery.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<link rel="shortcut icon" href="/Resources/Icon.png">
-		<title>Pokémon Quartz &mdash; Pokédex List</title>
+		<title>Pokémon Quartz | Pokédex Gallery</title>
 		<link rel="stylesheet" href="/styles.css">
 		<script src="/dynamics.js"></script>
 	</head>
