--- a/ROMHacks/PokémonQuartz/Pokédex.html
+++ b/ROMHacks/PokémonQuartz/Pokédex.html
@@ -52,7 +52,7 @@
 								001
 							</td>
 							<td class="col15">
-								<img src="/ROMHacks/PokémonQuartz/Icons/Chapebaya.png" class="ico"></img>
+								<img src="/ROMHacks/PokémonQuartz/Icons/Chapebaya.png" class="icon"></img>
 							</td>
 							<td class="col40 leftalign">
 								<a href="/ROMHacks/PokémonQuartz/Pokédex/Chapebaya.html">
@@ -70,7 +70,7 @@
 								004
 							</td>
 							<td>
-								<img src="/ROMHacks/PokémonQuartz/Icons/ChapebayaAlolan.png" class="ico"></img>
+								<img src="/ROMHacks/PokémonQuartz/Icons/ChapebayaAlolan.png" class="icon"></img>
 							</td>
 							<td class="leftalign">
 								<a href="/ROMHacks/PokémonQuartz/Pokédex/Chapebaya.html">
@@ -88,7 +88,7 @@
 								025
 							</td>
 							<td>
-								<img src="/ROMHacks/PokémonQuartz/Icons/ChapebayaNuclear.png" class="ico"></img>
+								<img src="/ROMHacks/PokémonQuartz/Icons/ChapebayaNuclear.png" class="icon"></img>
 							</td>
 							<td class="leftalign">
 								<a href="/ROMHacks/PokémonQuartz/Pokédex/Chapebaya.html">
