--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>The Fakemon Library &mdash; An archive for fan-made Pokémon</title>
 		<link rel="stylesheet" href="/styles.css">
 		<script src="/dynamics.js"></script>
+		<meta name="viewport" content="width=device-width"/>
 	</head>
 
 	<body>
