--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 	
 		<div id="page">
 		
+			<div id="header-mobile">
+	<img src="/Resources/ButtonFrame.png" class="mobile-button" onclick="toggleBar('pokenav-mobile')"></img>
+	<a href="https://fakemonlibrary.org"><img class="mobile-decoration" src="/Resources/DexHeaderMobile.png"></img></a>
+	<img src="/Resources/ButtonFrame.png" class="mobile-button" onclick="toggleBar('pokegear-mobile')"></img>
+</div>
+		
 			<header include-html="header.html">
 			</header>
 			
