--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		
 			<div id="header-mobile">
 	<img src="/Resources/ButtonFrame.png" class="mobile-button" onclick="toggleBar('pokenav-mobile')"></img>
-	<a href="https://fakemonlibrary.org"><img class="mobile-decoration" src="/Resources/DexHeaderMobile.png"></img></a>
+	<a href="https://fakemonlibrary.org"><img class="mobile-decoration" src="/Resources/ButtonFrame.png"></img></a>
 	<img src="/Resources/ButtonFrame.png" class="mobile-button" onclick="toggleBar('pokegear-mobile')"></img>
 </div>
 		
