--- a/header.html
+++ b/header.html
@@ -3,3 +3,9 @@
 	<a href="https://fakemonlibrary.org"><img src="/Resources/DexHeader.png" class="decoration float-center"></img></a>
 	<img src="/Resources/DexSlider.png" class="decoration"></img>
 </div>
+
+<div id="header-mobile">
+	<img src="/Resources/ButtonFrame.png" class="mobile-button" onclick="toggleBar('pokenav-mobile')"></img>
+	<a href="https://fakemonlibrary.org"><img class="mobile-decoration" src="/Resources/ButtonFrame.png"></img></a>
+	<img src="/Resources/ButtonFrame.png" class="mobile-button" onclick="toggleBar('pokegear-mobile')"></img>
+</div>
