--- a/ROMHacks/PokémonQuartz/Pokédex.html
+++ b/ROMHacks/PokémonQuartz/Pokédex.html
@@ -6,6 +6,7 @@
 		<title>Pokémon Quartz — Pokédex | The Fakemon Library</title>
 		<link rel="stylesheet" href="/styles.css">
 		<script src="/dynamics.js"></script>
+		<meta name="viewport" content="width=device-width"/>
 	</head>
 
 	<body>
@@ -110,6 +111,7 @@
 				
 				<div id="pokegear-mobile" include-html="sidebar.html" style="display: none;">
 				</div>
+				
 			</div>
 			
 			<footer include-html="/footer.html">
