--- a/ROMHacks/PokémonQuartz/Gallery.html
+++ b/ROMHacks/PokémonQuartz/Gallery.html
@@ -6,6 +6,7 @@
 		<title>Pokémon Quartz - Pokédex Gallery | The Fakemon Library</title>
 		<link rel="stylesheet" href="/styles.css">
 		<script src="/dynamics.js"></script>
+		<meta name="viewport" content="width=device-width"/>
 	</head>
 
 	<body>
@@ -42,7 +43,7 @@
 							<tr>
 								<td class="sprf" colspan="2">
 									<img title="Front" src="Sprites/Chapebaya.png" class="interactive" id="Chapebaya"
-									onclick="flipSprite('Chapebaya', 'Chapebaya.png', 'Chapebaya-back.png')">
+									onclick="flipSprite('Chapebaya', 'Sprites/Chapebaya.png', 'Sprites/Chapebaya-back.png')">
 									</img>
 								</td>
 							</tr>
@@ -65,7 +66,7 @@
 							<tr>
 								<td class="sprf" colspan="2">
 									<img title="Front" src="Sprites/Chapebaya.png" class="interactive" id="Chapebaya"
-									onclick="flipSprite('Chapebaya', 'Chapebaya.png', 'Chapebaya-back.png')">
+									onclick="flipSprite('Chapebaya', 'Sprites/Chapebaya.png', 'Sprites/Chapebaya-back.png')">
 									</img>
 								</td>
 							</tr>
@@ -88,7 +89,53 @@
 							<tr>
 								<td class="sprf" colspan="2">
 									<img title="Front" src="Sprites/Chapebaya.png" class="interactive" id="Chapebaya"
-									onclick="flipSprite('Chapebaya', 'Chapebaya.png', 'Chapebaya-back.png')">
+									onclick="flipSprite('Chapebaya', 'Sprites/Chapebaya.png', 'Sprites/Chapebaya-back.png')">
+									</img>
+								</td>
+							</tr>
+							<tr>
+								<td class="cell50">
+									<p class="type Grass">Grass</p>
+								</td>
+								<td class="cell50">
+									<p class="type Steel">Steel</p>
+								</td>
+							</tr>
+						</table>
+						
+						<table>
+							<tr>
+								<th class="sprh" colspan="2">
+									PULSE-001 Tangrowth
+								</th>
+							</tr>
+							<tr>
+								<td class="sprf" colspan="2">
+									<img title="Front" src="Sprites/Chapebaya.png" class="interactive" id="Chapebaya"
+									onclick="flipSprite('Chapebaya', 'Sprites/Chapebaya.png', 'Sprites/Chapebaya-back.png')">
+									</img>
+								</td>
+							</tr>
+							<tr>
+								<td class="cell50">
+									<p class="type Grass">Grass</p>
+								</td>
+								<td class="cell50">
+									<p class="type Steel">Steel</p>
+								</td>
+							</tr>
+						</table>
+						
+						<table>
+							<tr>
+								<th class="sprh" colspan="2">
+									PULSE-001 Tangrowth
+								</th>
+							</tr>
+							<tr>
+								<td class="sprf" colspan="2">
+									<img title="Front" src="Sprites/Chapebaya.png" class="interactive" id="Chapebaya"
+									onclick="flipSprite('Chapebaya', 'Sprites/Chapebaya.png', 'Sprites/Chapebaya-back.png')">
 									</img>
 								</td>
 							</tr>
