--- a/ROMHacks/PokémonQuartz/index.html
+++ b/ROMHacks/PokémonQuartz/index.html
@@ -3,9 +3,10 @@
 
 	<head>
 		<link rel="shortcut icon" href="/Resources/Icon.png">
-		<title>The Fakemon Library | Pokémon Quartz</title>
+		<title>Pokémon Quartz | The Fakemon Library</title>
 		<link rel="stylesheet" href="/styles.css">
 		<script src="/dynamics.js"></script>
+		<meta name="viewport" content="width=device-width"/>
 	</head>
 
 	<body>
