--- a/header.html
+++ b/header.html
@@ -9,3 +9,9 @@
 	<a href="https://fakemonlibrary.org"><img class="mobile-decoration" src="/Resources/DexHeaderMobile.png"></img></a>
 	<img src="/Resources/ButtonFrame.png" class="mobile-button" onclick="toggleBar('pokegear-mobile')"></img>
 </div>
+
+<div id="header-small">
+	<img src="/Resources/ButtonFrame.png" class="mobile-button" onclick="toggleBar('pokenav-mobile')"></img>
+	<a href="https://fakemonlibrary.org"><img class="mobile-decoration" src="/Resources/DexHeaderSmall.png"></img></a>
+	<img src="/Resources/ButtonFrame.png" class="mobile-button" onclick="toggleBar('pokegear-mobile')"></img>
+</div>
