--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,6 @@
 <h1 class="barheader">Main</h1>
 	<ul>
+		<li><a href="/index">Home</a></li>
 		<li><a href=#>Pokédex</a></li>
 		<li><a href=#>Lost Pokémon</a></li>
 		<li><a href=#>PokéGods</a></li>
@@ -7,7 +8,7 @@
 		<li><a href=#>Rumors</a></li>
 		<li><a href=#>Leaks</a></li>
 	</ul>
-<h1 class="barheader">ROM Hacks</h1>
+<h1 class="barheader"><a href="/ROMHacks/index.html">ROM Hacks</a></h1>
 	<ul>
 		<li><a href="/ROMHacks/PokémonQuartz/index.html">Quartz</a></li>
 		<li><a href=#>Marble</a></li>
@@ -44,6 +45,7 @@
 		<li><a href=#>Garnet</a></li>
 		<li><a href=#>Insurgence</a></li>
 		<li><a href=#>Empyrean</a></li>
+		<li><a href=#>Jade</a></li>
 		<li><a href=#>Reborn</a></li>
 		<li><a href=#>Solar Light & Lunar Dark</a></li>
 		<li><a href=#>Twilight (Lunar & Solar)</a></li>
@@ -70,6 +72,7 @@
 		<li><a href=#>Metal Malachite</a></li>
 		<li><a href=#>Banished Platinum</a></li>
 		<li><a href=#>Cardinal</a></li>
+		<li><a href=#>Stralis</a></li>
 		<li><a href=#>Infinite Fusion</a></li>
 	</ul>
 <h1 class="barheader">Galleries</h1>
