--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,6 @@
 <h1 class="barheader">Main</h1>
 	<ul>
-		<li><a href="/index">Home</a></li>
+		<li><a href="https://fakemonlibrary.org">Home</a></li>
 		<li><a href=#>Pokédex</a></li>
 		<li><a href=#>Lost Pokémon</a></li>
 		<li><a href=#>PokéGods</a></li>
