--- a/ROMHacks/PokémonQuartz/Pokédex/Template.html
+++ b/ROMHacks/PokémonQuartz/Pokédex/Template.html
@@ -109,10 +109,10 @@
 							</tr>
 							<tr>
 								<td class="sprf" colspan="2">
-									<img id="Chapebaya" src="Sprites/Chapebaya.png" title="Front" class="interactive"
-										onclick="flipSprite('Chapebaya',
-											'Sprites/ChapebayaShiny.png',
-											'Sprites/ChapebayaShiny-back.png')">
+									<img id="Chapebaya-Shiny" src="Sprites/Chapebaya-Shiny.png" title="Front" class="interactive"
+										onclick="flipSprite('Chapebaya-Shiny',
+											'Sprites/Chapebaya-Shiny.png',
+											'Sprites/Chapebaya-Shiny-Back.png')">
 									</img>
 								</td>
 							</tr>
@@ -267,8 +267,8 @@
 										EV Yield
 									</th>
 									<td>
-										<span class="Attack">2 Attack</span>
-										<span class="Defense">1 Defense</span>
+										<p class="Attack">2 Attack</p>
+										<p class="Defense">1 Defense</p>
 										Unknown
 									</td>
 								</tr>
