--- a/ROMHacks/PokémonQuartz/Pokédex/Template.html
+++ b/ROMHacks/PokémonQuartz/Pokédex/Template.html
@@ -109,10 +109,10 @@
 							</tr>
 							<tr>
 								<td class="sprf" colspan="2">
-									<img id="Chapebaya-Shiny" src="Sprites/Chapebaya-Shiny.png" title="Front" class="interactive"
+									<img id="Chapebaya-Shiny" src="../Sprites/Chapebaya-Shiny.png" title="Front" class="interactive"
 										onclick="flipSprite('Chapebaya-Shiny',
-											'Sprites/Chapebaya-Shiny.png',
-											'Sprites/Chapebaya-Shiny-Back.png')">
+											'../Sprites/Chapebaya-Shiny.png',
+											'../Sprites/Chapebaya-Shiny-Back.png')">
 									</img>
 								</td>
 							</tr>
