--- a/ROMHacks/PokémonQuartz/Pokédex/Template.html
+++ b/ROMHacks/PokémonQuartz/Pokédex/Template.html
@@ -92,7 +92,7 @@
 									<img id="Chapebaya" src="../Sprites/Chapebaya.png" title="Front" class="interactive"
 										onclick="flipSprite('Chapebaya',
 											'../Sprites/Chapebaya.png',
-											'../Sprites/Chapebaya-back.png')">
+											'../Sprites/Chapebaya-Back.png')">
 									</img>
 								</td>
 							</tr>
