--- a/ROMHacks/PokémonQuartz/Pokédex/Template.html
+++ b/ROMHacks/PokémonQuartz/Pokédex/Template.html
@@ -83,8 +83,8 @@
 							<tr>
 								<th class="sprh" colspan="2">
 									Chapebaya
-									<img src="/Resources/Male.png" class="marker"></img>
-									<img src="/Resources/Female.png" class="marker"></img>
+									<img src="/Resources/Male.png" title="Male" class="marker"></img>
+									<img src="/Resources/Female.png" title="Female" class="marker"></img>
 								</th>
 							</tr>
 							<tr>
@@ -101,10 +101,10 @@
 						<table>
 							<tr>
 								<th class="sprh" colspan="2">
-									<img src="/Resources/Shiny.png" class="marker"></img>
+									<img src="/Resources/Shiny.png" title="Shiny" class="marker"></img>
 									Chapebaya
-									<img src="/Resources/Male.png" class="marker"></img>
-									<img src="/Resources/Female.png" class="marker"></img>
+									<img src="/Resources/Male.png" title="Male" class="marker"></img>
+									<img src="/Resources/Female.png" title="Female" class="marker"></img>
 								</th>
 							</tr>
 							<tr>
